| Bug #44915 | Failure when setting up replication (events) can lead to subsequent node failure | ||
|---|---|---|---|
| Submitted: | 16 May 11:45 | Modified: | 20 May 12:23 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
| Triage: | Needs Triage: D2 (Serious) / R2 (Low) / E2 (Low) | ||
[16 May 11:45]
Jonas Oreland
[16 May 11:46]
Jonas Oreland
P2 is motivated by mtr/pb relation. otherwise I would say P3/P4
[17 May 9:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74301 2926 Jonas Oreland 2009-05-17 ndb - bug#44915 keep hashtable consistent even in unusual error situations
[17 May 9:56]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:jonas@mysql.com-20090517075417-wirmsmvhhijlcmoh) (version source revid:jonas@mysql.com-20090517075417-wirmsmvhhijlcmoh) (merge vers: 5.1.34-ndb-6.3.25) (pib:6)
[17 May 9:57]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090517075516-p4bhdsy2mlhg1jiq) (version source revid:jonas@mysql.com-20090517075516-p4bhdsy2mlhg1jiq) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[17 May 9:58]
Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jonas@mysql.com-20090517070337-fkgvm7vy33s33w1m) (version source revid:jonas@mysql.com-20090517070337-fkgvm7vy33s33w1m) (merge vers: 5.1.34-ndb-6.2.18) (pib:6)
[20 May 12:23]
Jon Stephens
Documented bugfix in the NDB-6.2.18, 6.3.25, and 7.0.6 changelogs as follows:
A failure when setting up replication events could lead to
subsequent data node failures.
[24 May 20:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74850 2933 Jonas Oreland 2009-05-24 ndb - bug#44915 - fix bug with crash during restart, where a mbyte incorrectly could be skipped, leading to "end of log wo/ finding gci"
[24 May 21:07]
Bugs System
Pushed into 5.1.34-ndb-6.3.26 (revid:jonas@mysql.com-20090524184324-bx0w5bttsayo9usp) (version source revid:jonas@mysql.com-20090524184324-bx0w5bttsayo9usp) (merge vers: 5.1.34-ndb-6.3.26) (pib:6)
[24 May 21:07]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090524190502-wdd2fh3kckll5lrz) (version source revid:jonas@mysql.com-20090524190502-wdd2fh3kckll5lrz) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[24 May 21:21]
Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jonas@mysql.com-20090524191609-szw1gkl7lnlid83g) (version source revid:jonas@mysql.com-20090524182937-woj16eknnx8bxerj) (merge vers: 5.1.34-ndb-6.2.18) (pib:6)
