ndb - bug#44915 - fix bug with crash during restart, where a mbyte incorrectly could be skipped, leading to "end of log wo/ finding gci"